[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/enemies/enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 400.0

[node name="Enemy" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
speed = 100

[node name="DeathTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="BulletSpawn" type="Position2D" parent="." index="5"]

[node name="PlayerDetectionArea" type="Area2D" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
shape = SubResource( 1 )
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_exited"]
